--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>Home page</h1>
-    <form action="/login" method="get" >
+    <form action="/user/login" method="get" >
         <button>login</button>
     </form>
-    <form action="/register" method="get" >
+    <form action="/user/register" method="get" >
         <button>register</button>
     </form>
-    <form action="/logout" method="post" >
+    <form action="/user/logout" method="post" >
         <button>logout</button>
     </form>
 </body>
