--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/auth.css">
+    <title>ArtHarbour</title>
 </head>
 <body>
+      <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
+        <div class="st-navbar-desktop">
+          <div class="container">
+            <div class="st-navbar-desktop-logo">
+              <a class="st-navbar-desktop-logo-link" title="Logo" href="/"><img src="https://www.smoothemes.es/media/logos/smoothemes-logo.svg"></a>
+            </div>
+            <nav class="st-navbar-desktop-menu" role="navigation">
+              <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
+                <li><a href="#">Paintings</a></li>
+                <li><a href="#">Sketches</a></li>
+                <li><a href="#">Sculptures</a></li>
+                <li><a href="#">Artists</a></li>
+                <li><a href="#">Contacto</a></li>
+                <% if(!currentUser) {%>
+                    <li><a class="nav-link" href="/login">Login</a></li>
+                    <li><a class="nav-link" href="/register">Register</a></li>
+                    <% } else {%>
+                      <li><a class="nav-link" href="/logout">Logout</a></li>
+                      <% } %>
+                  <li><a class="nav-link scrollto" href="#contacts">Contact Us</a></li>
+                </ul>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+      
+      
+      <div class="container" style="margin-top:110px;">
+        <div class="jumbotron">
+          <h2>Navbar bootstrap superfish</h2>
+          <p>Utilizando la navbar de <a href="https://getbootstrap.com/" target="_blank">bootstrap</a>, le añadimos el plugin de navbars <a href="https://users.tpg.com.au/j_birch/plugins/superfish/" target="_blank">superfish</a> y mejoramos sus eventos con <a href="http://cherne.net/brian/resources/jquery.hoverIntent.html" target="_blank">hoverIntent</a>.</p>
+        </div>
+      </div>
+      
+      <div class="container" style="height:460px;"></div>
     <h1>Home page</h1>
     <form action="/user/login" method="get" >
         <button>login</button>
@@ -16,5 +54,7 @@
     <form action="/user/logout" method="post" >
         <button>logout</button>
     </form>
+
+
 </body>
 </html>
