--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -26,15 +26,16 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>ArtHarbour Login</title>
-    <link rel="stylesheet" href="styles/auth.css">
+  <title>ArtHarbour Login</title>
+  <link rel="stylesheet" href="/styles/auth.css">
 </head>
+
 <body>
-    <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header">
     <div class="container d-flex align-items-center">
       <a href="#" class="logo me-auto"><img src="" alt="" class="img-fluid"></a>
-      <h2 class="logo me-auto"><a href="/">ArtHarbour</a></h2>     
+      <h2 class="logo me-auto"><a href="/">ArtHarbour</a></h2>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
 
@@ -43,7 +44,7 @@
           <li><a class="nav-link scrollto" href="#services">Drawings</a></li>
           <li><a class="nav-link scrollto" href="#about-us">Sculptures</a></li>
           <li><a class="nav-link scrollto" href="#departments">Artists</a></li>
-         
+
           <li><a class="nav-link" href="/cart"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -54,35 +55,35 @@
     <h2>Featured Paintings</h2>
   </div>
   <h3 class="auth-heading" style="color: #164B60;">Please Login To Access All Functionalities!</h3>
-    <div class="auth-div">
-      <div class="card" style="height: 450px; ">
-        <div class="card-body">
-          <form action="/login" method="POST" class="validated-form" novalidate>
-            <div class="input">
-              <label class="form-label" for="username">Enter you Email-Id:</label>
-              <input class="form-control" type="email" id="email" name="email" required
-                style="font-size: medium; height:fit-content;">
+  <div class="auth-div">
+    <div class="card" style="height: 450px; ">
+      <div class="card-body">
+        <form action="/user/login" method="POST" class="validated-form" novalidate>
+          <div class="input">
+            <label class="form-label" for="username">Enter you Email-Id:</label>
+            <input class="form-control" type="email" id="email" name="email" required
+              style="font-size: medium; height:fit-content;">
 
-              <div class="valid-feedback">
-                <h5>Looks good!</h5>
-              </div>
-              <label class="form-label" for="password">Enter Password:</label>
-              <input class="form-control" type="password" id="password" name="password" required
-                style="font-size: medium;">
-              <div class="valid-feedback">
-                <h5>Looks good!</h5>
-              </div>
+            <div class="valid-feedback">
+              <h5>Looks good!</h5>
             </div>
-            <div class="login-btn">
-              <button class="btn btn-success btn-lg" id="button">Login</button>
+            <label class="form-label" for="password">Enter Password:</label>
+            <input class="form-control" type="password" id="password" name="password" required
+              style="font-size: medium;">
+            <div class="valid-feedback">
+              <h5>Looks good!</h5>
             </div>
-          </form>
-          <p style="font-size: 20px">New User?
-            <a href="/register">SignUp</a>
-          </p>
+          </div>
+          <div class="login-btn">
+            <button class="btn btn-success btn-lg" id="button">Login</button>
+          </div>
+        </form>
+        <p style="font-size: 20px">New User?
+          <a href="/user/register">SignUp</a>
+        </p>
 
-        </div>
       </div>
-      </div>
+    </div>
+  </div>
   </div>
 </body>
