--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,10 +19,10 @@
             <nav class="st-navbar-desktop-menu" role="navigation">
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
                 <li><a href="/paintings">Paintings</a></li>
-                <li><a href="#">Sketches</a></li>
-                <li><a href="#">Sculptures</a></li>
-                <li><a href="#">Artists</a></li>
-                <li><a href="/cart"><li><a class="nav-link" href="/cart"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li></a></li>
+                <li><a href="/sketches">Sketches</a></li>
+                <li><a href="/sculptures">Sculptures</a></li>
+                <li><a href="/artists">Artists</a></li>
+                <li><a class="nav-link" href="/cart"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li>
                 </ul>
               </ul>
             </nav>
