--- a/views/sketches.ejs
+++ b/views/sketches.ejs
@@ -28,19 +28,18 @@
           </div>
         </div>
       </div>  
-      <!-- <div class="container" style="margin-top:110px;"> -->
-        <div style="display: block;"><h2 class="art-heading">Featured Paintings</h2></div>
-    <section class="arts" id="art-list" >
-        <div>
+      <div style="display: block;"><h2 class="art-heading">Featured Paintings</h2></div>
+      <section class="arts" id="art-list" >
+          <div>
         <% prods.forEach(function(Product){%>
-            <% if(Product.category==='Painting') {%>
+            <% if(Product.category==='Sketches') {%>
         <article>
           <div class="row article-wrapper">
             <div class="column card-div col-lg-4 mb-4">        
             <figure>
-              <img src= <%= Product.image %> alt="" />
+              <img src="https://img.freepik.com/free-photo/pleased-young-female-doctor-wearing-medical-robe-stethoscope-around-neck-standing-with-closed-posture_409827-254.jpg" alt="" />
             </figure>
-            <div class="article-body">     
+            <div class="article-body">
               <h2><p><%= Product.artName %></p></h2>
               <p>
                 <p><%= Product.description %></p>
