added addProduct route

--- a/views/paintings/addPainting.ejs
+++ b/views/paintings/addPainting.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="/painting/add" method="post">
+    <form action="/paintings/add" method="post">
         <label for="artName">Art Name</label>
         <input type="text" id="artName" name="artName">
         <label for="description">Description</label>
@@ -17,8 +17,11 @@
         <input type="number" id="price" name="price">
         <label for="listedBy">User Name</label>
         <input type="text" id="listedBy" name="listedBy">
+        <label for="category">Category </label>
+        <input type="text" id="category" name="category">
         <label for="image">Image URL: </label>
-        <input type="text" id="listedBy" name="listedBy">
+        <input type="text" id="image" name="image">
+        <button type="submit">Add</button>
     </form>
 </body>
 
