--- a/public/styles/painting.css
+++ b/public/styles/painting.css
@@ -21,7 +21,7 @@
 }
 
 body {
-    height: 100vh;
+    
     background-image:
         url("../images/cloudbg.jpg");
     background-size: cover;
@@ -29,3 +29,34 @@ body {
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     background-attachment: fixed;
 }
+.card {
+    flex-direction: row;
+    align-items: center;
+  }
+  .card-title {
+    font-weight: bold;
+  }
+  .card img {
+    width: 30%;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: calc(0.25rem - 1px);
+  }
+  @media only screen and (max-width: 768px) {
+    a {
+      display: none;
+    }
+    .card-body {
+      padding: 0.5em 0.5em;
+    }
+    .card-body .card-text {
+      margin: 20px;
+    }
+    .card img {
+      width: 50%;
+    }
+  }
+  @media only screen and (max-width: 1200px) {
+    .card img {
+      width: 40%;
+    }
+  }
