--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,28 +18,12 @@
     background-size: cover; background-position: center; text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); box-shadow:
     inset 0 0 5rem rgba(0, 0, 0, 0.5);">
   <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
-    <!-- <div class="st-navbar-desktop">
-      <div class="container">
-        <div class="st-navbar-desktop-logo">
-          <a class="st-navbar-desktop-logo-link" title="Logo" href="/" style="margin-left: 90px;">ArtHub</a>
-        </div>
-        <nav class="st-navbar-desktop-menu" role="navigation" style="margin-top: 5px;">
-          <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
-            <li><a href="/paintings" style="margin-right: 50px;">Paintings</a></li>
-            <li><a href="#" style="margin-right: 50px;">Sketches</a></li>
-            <li><a href="#" style="margin-right: 50px;">Sculptures</a></li>
-            <li><a href="#" style="margin-right: 50px;">Artists</a></li>
-            <li><a class="nav-link" href="/api/cart" style="margin-right: 50px;"><i
-                  class="fa-light fa-cart-shopping fa-lg"></i></a></li></a></li>
-          </ul>
-          </ul>
-        </nav>
-      </div>
-    </div> -->
     <%- include('./partials/navbar') %>
   </div>
   <div class="midPage-logo" style="display: flex; justify-content: center; align-items: center; margin-top: 22.5%;">
     <h1>ArtHub</h1>
+    <p>Buy, Sell, Connect!!</p>
+    <p>Meet MILLIONS with the same sense of Art</p>
   </div>
 
 
