--- a/public/styles/painting.css
+++ b/public/styles/painting.css
@@ -29,9 +29,12 @@ body {
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     background-attachment: fixed;
 }
+.whole-card{
+  padding-left: 30%;
+  margin-top: 10%;
+}
 .card {
     flex-direction: row;
-    align-items: center;
   }
   .card-title {
     font-weight: bold;
@@ -47,6 +50,7 @@ body {
     }
     .card-body {
       padding: 0.5em 0.5em;
+      fill-opacity: 0.5;
     }
     .card-body .card-text {
       margin: 20px;
