--- a/views/paintings.ejs
+++ b/views/paintings.ejs
@@ -37,7 +37,7 @@
     <%- include('./partials/navbar') %>
   </div>
   <!-- <h2 class=" art-heading">Featured Paintings</h2> -->
-  <div>
+  <div class="whole-card">
     <% prods.forEach(function(Product){%>
       <div class="card" style="height: min-content;width: 700px; margin: 10px;">
         <% if(Product.category==='Painting' ) {%>
