--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/auth.css">
   <link rel="stylesheet" href="/styles/home.css">
+  <link rel="stylesheet" href="/styles/navbar.css">
+  
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <title>ArtHarbour</title>
 </head>
@@ -22,8 +24,6 @@
   </div>
   <div class="midPage-logo" style="display: flex; justify-content: center; align-items: center; margin-top: 22.5%;">
     <h1>ArtHub</h1>
-    <p>Buy, Sell, Connect!!</p>
-    <p>Meet MILLIONS with the same sense of Art</p>
   </div>
 
 
