--- a/views/paintings.ejs
+++ b/views/paintings.ejs
@@ -29,6 +29,8 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/painting.css">
+  <link rel="stylesheet" href="/styles/navbar.css">
+  <link rel="stylesheet" href="/styles/cart.css">
   <title>ArtHarbour</title>
 </head>
 
@@ -41,7 +43,7 @@
     <% prods.forEach(function(Product){%>
       <div class="card" style="height: min-content;width: 700px; margin: 10px;">
         <% if(Product.category==='Painting' ) {%>
-          <img src="https://codingyaar.com/wp-content/uploads/bootstrap-4-card-image-left-demo-image.jpg"
+          <img class="item" src="https://codingyaar.com/wp-content/uploads/bootstrap-4-card-image-left-demo-image.jpg"
             class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">
@@ -63,7 +65,7 @@
             <p>Created: <%= Product.creationDate %>
             </p>
             </p>
-
+            <button class="add-to-cart" type="button">Add to cart</button>
           </div>
           <% } %>
       </div>
@@ -75,6 +77,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
     integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
     crossorigin="anonymous"></script>
+    <script src="add-to-cart.js"></script>
 </body>
 
 
