--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,18 +1,64 @@
 <div class="st-navbar-desktop">
     <div class="container">
-        <div class="st-navbar-desktop-logo">
+        <div class="wrapper">
+            <div class="multi_color_border"></div>
+            <div class="top_nav">
+                <div class="left">
+                    <div class="logo">
+                        <a class="st-navbar-desktop-logo-link" title="Logo" href="/"><p><span>ArtHub</span></p></a>
+                    </div>
+                    <div class="search_bar">
+                        <input type="text" placeholder="Search">
+                    </div>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li><a href="#">Buy</a></li>
+                        <li><a href="#">Sell</a></li>
+                        <li><a href="/cart"><span><i class="shopping-cart"></i></span></a></li>
+                        <li><a href="#"></a>Login/Signup</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom-nav">
+                <ul>
+                    <li><a href="/paintings">Paintings</a></li>
+                    <li><a href="/sculptures">Sculptures</a></li>
+                    <li><a href="/sketches">Sketches</a></li>
+                    <li><a href="/artists">Artists</a></li>
+                    <li><a href="/gallery">Galleries</a></li>
+                </ul>
+            </div>
+            <!-- <div class="banner">
+                <img src="../images/homePage.jpg" alt="">
+            </div> -->
+        </div>
+        <!-- <div class="st-navbar-desktop-logo">
             <a class="st-navbar-desktop-logo-link" title="Logo" href="/" style="margin-left: 90px;">ArtHub</a>
         </div>
+        <div>
+        <nav class="st-navbar-desktop-menu" role="navigation" style="margin-top: 5px;">
+            <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
+                <li><a href="/paintings" style="margin-right: 50px;">Buy</a></li>
+                <li><a href="/sketches" style="margin-right: 50px;">Sell</a></li>
+                <li><a href="/sculptures" style="margin-right: 50px;">Login</a></li>
+                <li><a href="/artists" style="margin-right: 50px;">Register</a></li>
+                <li><a class="nav-link" href="/api/cart" style="margin-right: 50px;"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li></a></li>
+            </ul>
+            </ul>
+        </nav>
+    </div>
+    <div>
         <nav class="st-navbar-desktop-menu" role="navigation" style="margin-top: 5px;">
             <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
                 <li><a href="/paintings" style="margin-right: 50px;">Paintings</a></li>
                 <li><a href="/sketches" style="margin-right: 50px;">Sketches</a></li>
                 <li><a href="/sculptures" style="margin-right: 50px;">Sculptures</a></li>
                 <li><a href="/artists" style="margin-right: 50px;">Artists</a></li>
-                <li><a class="nav-link" href="/api/cart" style="margin-right: 50px;"><i
-                            class="fa-light fa-cart-shopping fa-lg"></i></a></li></a></li>
+                <li><a class="nav-link" href="/api/cart" style="margin-right: 50px;"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li></a></li>
             </ul>
             </ul>
         </nav>
+    </div> -->
     </div>
 </div>
