--- a/views/sculptures.ejs
+++ b/views/sculptures.ejs
@@ -29,6 +29,8 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/painting.css">
+  <link rel="stylesheet" href="/styles/navbar.css">
+  <link rel="stylesheet" href="/styles/cart.css">
   <title>ArtHarbour</title>
 </head>
 
@@ -62,7 +64,7 @@
             <p>Created: <%= Product.creationDate %>
             </p>
             </p>
-
+            <button class="add-to-cart" type="button">Add to cart</button>
           </div>
           <% } %>
       </div>
@@ -74,6 +76,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
     integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
     crossorigin="anonymous"></script>
+    <script src="add-to-cart.js"></script>
 </body>
 
 
