--- a/views/sketches.ejs
+++ b/views/sketches.ejs
@@ -5,78 +5,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/6d5b2cec0a.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@600&family=Tilt+Prism&family=Ubuntu&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Tilt+Prism&family=Ubuntu&display=swap"
+    rel="stylesheet">
+  <!-- icons -->
+  <script src="https://kit.fontawesome.com/6d5b2cec0a.js" crossorigin="anonymous"></script>
+  <!-- bootstrap and js -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/main.css">
-  <link rel="stylesheet" href="/styles/auth.css">
+  <link rel="stylesheet" href="/styles/painting.css">
+  <link rel="stylesheet" href="/styles/navbar.css">
+  <link rel="stylesheet" href="/styles/cart.css">
   <title>ArtHarbour</title>
 </head>
 
 <body>
   <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
-    <div class="st-navbar-desktop">
-      <div class="container">
-        <div class="st-navbar-desktop-logo">
-          <a class="st-navbar-desktop-logo-link" title="Logo" href="/"><img
-              src="https://www.smoothemes.es/media/logos/smoothemes-logo.svg"></a>
-        </div>
-        <nav class="st-navbar-desktop-menu" role="navigation">
-          <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
-            <li><a href="/paintings">Paintings</a></li>
-            <li><a href="/sketches">Sketches</a></li>
-            <li><a href="/sculptures">Sculptures</a></li>
-            <li><a href="/artists">Artists</a></li>
-            <li><a href="/cart">
-            <li><a class="nav-link" href="/cart"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li></a></li>
-          </ul>
-          </ul>
-        </nav>
-      </div>
-    </div>
+    <%- include('./partials/navbar') %>
   </div>
-  <div style="display: block;">
-    <h2 class="art-heading">Featured Paintings</h2>
-  </div>
-  <section class="arts" id="art-list">
-    <div>
-      <% prods.forEach(function(Product){%>
+  <div class="whole-card">
+    <% prods.forEach(function(Product){%>
+      <div class="card" style="height: min-content;width: 700px; margin: 10px;">
         <% if(Product.category==='Sketches' ) {%>
-          <article>
-            <div class="row article-wrapper">
-              <div class="column card-div col-lg-4 mb-4">
-                <figure>
-                  <img
-                    src="https://img.freepik.com/free-photo/pleased-young-female-doctor-wearing-medical-robe-stethoscope-around-neck-standing-with-closed-posture_409827-254.jpg"
-                    alt="" />
-                </figure>
-                <div class="article-body">
-                  <h2>
-                    <p>
-                      <%= Product.artName %>
-                    </p>
-                  </h2>
-                  <p>
-                  <p>
-                    <%= Product.description %>
-                  </p>
-                  <p>Sell Price: <%= Product.price %>
-                  </p>
-                  <p>Category: <%= Product.category %>
-                  </p>
-                  <p>Listed By/Artist: <%= Product.listedBy %>
-                  </p>
-                  <p>Created: <%= Product.creationDate %>
-                  </p>
-                  </p>
-                  <% } %>
-                    <!-- <a href="#" class="read-more"> -->
-                    <a href="/cart" class="appointment-btn scrollto"><span class="d-none d-md-inline">Add to</span>
-                      Cart</a></span>
-                </div>
-              </div>
-            </div>
-          </article>
-    </div>
-    <% }) %>
-  </section>
-</body>
+          <img src="https://codingyaar.com/wp-content/uploads/bootstrap-4-card-image-left-demo-image.jpg"
+            class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">
+              <p>
+                <%= Product.artName %>
+              </p>
+            </h5>
+            <p class="card-text">
 
+            <p>
+              <%= Product.description %>
+            </p>
+            <p>Sell Price: <%= Product.price %>
+            </p>
+            <p>Category: <%= Product.category %>
+            </p>
+            <p>Listed By/Artist: <%= Product.listedBy %>
+            </p>
+            <p>Created: <%= Product.creationDate %>
+            </p>
+            </p>
+            <button class="add-to-cart" type="button">Add to cart</button>
+          </div>
+          <% } %>
+      </div>
+      <% }) %>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
+    <script src="add-to-cart.js"></script>
+</body>
 </html>
