--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,15 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/6d5b2cec0a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/styles/main.css">
-  <link rel="stylesheet" href="/styles/auth.css">
+  <!-- <link rel="stylesheet" href="/styles/auth.css"> -->
   <link rel="stylesheet" href="/styles/home.css">
   <link rel="stylesheet" href="/styles/navbar.css">
-  
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
   <title>ArtHarbour</title>
 </head>
 
 <body>
+
   <img src="" alt="" style="height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     background-size: cover; background-position: center; text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); box-shadow:
@@ -22,11 +25,21 @@
   <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
     <%- include('./partials/navbar') %>
   </div>
-  <div class="midPage-logo" style="display: flex; justify-content: center; align-items: center; margin-top: 22.5%;">
+  <section></section>
+  <div class="flash" style="margin-top: 100px; display: flex; justify-content: center">
+    <%- include('./partials/flash') %>
+  </div>
+  <div class="midPage-logo" style="display: flex; justify-content: center; align-items: center; margin-top: 18%;">
     <h1>ArtHub</h1>
   </div>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
