--- a/views/paintings.ejs
+++ b/views/paintings.ejs
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+  <%- include('./partials/flash')%>
   <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
     <%- include('./partials/navbar') %>
   </div>
