--- a/views/sculptures.ejs
+++ b/views/sculptures.ejs
@@ -35,47 +35,48 @@
 </head>
 
 <body>
-  <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
-    <%- include('./partials/navbar') %>
-  </div>
-  <div class="whole-card">
-    <% prods.forEach(function(Product){%>
-      <div class="card" style="height: min-content;width: 700px; margin: 10px;">
-        <% if(Product.category==='Sculpture' ) {%>
-          <img src="https://codingyaar.com/wp-content/uploads/bootstrap-4-card-image-left-demo-image.jpg"
-            class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">
-              <p>
-                <%= Product.artName %>
-              </p>
-            </h5>
-            <p class="card-text">
+  <%- include('./partials/flash')%>
+    <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
+      <%- include('./partials/navbar') %>
+    </div>
+    <div class="whole-card">
+      <% prods.forEach(function(Product){%>
+        <div class="card" style="height: min-content;width: 700px; margin: 10px;">
+          <% if(Product.category==='Sculpture' ) {%>
+            <img src="https://codingyaar.com/wp-content/uploads/bootstrap-4-card-image-left-demo-image.jpg"
+              class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">
+                <p>
+                  <%= Product.artName %>
+                </p>
+              </h5>
+              <p class="card-text">
 
-            <p>
-              <%= Product.description %>
-            </p>
-            <p>Sell Price: <%= Product.price %>
-            </p>
-            <p>Category: <%= Product.category %>
-            </p>
-            <p>Listed By/Artist: <%= Product.listedBy %>
-            </p>
-            <p>Created: <%= Product.creationDate %>
-            </p>
-            </p>
-            <button class="add-to-cart" type="button">Add to cart</button>
-          </div>
-          <% } %>
-      </div>
-      <% }) %>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
+              <p>
+                <%= Product.description %>
+              </p>
+              <p>Sell Price: <%= Product.price %>
+              </p>
+              <p>Category: <%= Product.category %>
+              </p>
+              <p>Listed By/Artist: <%= Product.listedBy %>
+              </p>
+              <p>Created: <%= Product.creationDate %>
+              </p>
+              </p>
+              <button class="add-to-cart" type="button">Add to cart</button>
+            </div>
+            <% } %>
+        </div>
+        <% }) %>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+      integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+      integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+      crossorigin="anonymous"></script>
     <script src="add-to-cart.js"></script>
 </body>
 
