--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -32,58 +32,17 @@
 </head>
 
 <body>
-    <!-- ======= Header ======= -->
-    <header id="header">
-        <div class="container d-flex align-items-center">
-            <a href="#" class="logo me-auto"><img src="" alt="" class="img-fluid"></a>
-            <h2 class="logo me-auto"><a href="/">ArtHarbour</a></h2>
-
-            <nav id="navbar" class="navbar order-last order-lg-0">
-
-                <ul>
-                    <li><a class="nav-link scrollto active" href="/">Paintings</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Drawings</a></li>
-                    <li><a class="nav-link scrollto" href="#about-us">Sculptures</a></li>
-                    <li><a class="nav-link scrollto" href="#departments">Artists</a></li>
-
-                    <li><a class="nav-link" href="/cart"><i class="fa-light fa-cart-shopping fa-lg"></i></a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
-        </div>
-    </header><!-- End Header -->
-    <div class="heading">
-        <h2>Featured Paintings</h2>
-    </div>
-    <h3 class="auth-heading" style="color: #164B60;">Please Login To Access All Functionalities!</h3>
-    <div class="auth-div">
-        <div class="card" style="height: 450px; ">
-            <div class="card-body">
-                <form action="/user/register" method="POST" class="validated-form" novalidate>
-                    <div class="input">
-                        <label class="form-label" for="userEmail">Enter you Email-Id:</label>
-                        <input class="form-control" type="email" id="userEmail" name="userEmail" required
-                            style="font-size: medium; height:fit-content;">
-
-                        <div class="valid-feedback">
-                            <h5>Looks good!</h5>
-                        </div>
-                        <label class="form-label" for="username">Enter you UserName:</label>
-                        <input class="form-control" type="text" id="username" name="username" required
-                            style="font-size: medium; height:fit-content;">
-                        <label class="form-label" for="password">Enter Password:</label>
-                        <input class="form-control" type="password" id="password" name="password" required
-                            style="font-size: medium;">
-                        <div class="valid-feedback">
-                            <h5>Looks good!</h5>
-                        </div>
-                    </div>
-                    <div class="login-btn">
-                        <button class="btn btn-success btn-lg" id="button">Login</button>
-                    </div>
+    <%- include('../partials/flash')%>
+        <div class="login-page">
+            <div class="form">
+                <form class="register-form" method="post" action="/user/register">
+                    <input type="text" name="username" id="username" placeholder="username" />
+                    <input type="password" name="password" id="password" placeholder="password" />
+                    <input type="text" name="userEmail" id="userEmail" placeholder="email address" />
+                    <button>create</button>
+                    <p class="message">Already registered? <a href="/user/login">Sign In</a></p>
                 </form>
             </div>
         </div>
-    </div>
-    </div>
+        <script src="auth.js"></script>
 </body>
