--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@600&family=Playfair+Display&family=Roboto:wght@100&family=Tilt+Prism&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Montserrat:wght@600&family=Tilt+Prism&family=Ubuntu&display=swap"
@@ -44,16 +48,12 @@
         <section style="margin: 120px;">
             <div>
                 <h1 class="top-heading">Share your creativity with the world today!</h1>
-                <div class="heading">
-                    <h3 class="top-heading" style="color: #164B60;">Fill the details below:</h3>
-                </div>
-
                 <div class="dept">
                     <form method="post" action="/sell">
                         <table id="appt-table" class="table">
                             <tr class="trow">
                                 <td>
-                                    <label for="artName">Name of your masterpiece: </label>
+                                    <label for="artName" class="label-font">Name of your masterpiece: </label>
                                 </td>
                                 <td>
                                     <h4>
@@ -63,7 +63,7 @@
                             </tr>
                             <tr class="trow">
                                 <td>
-                                    <label for="description">What makes your masterpiece unique? </label>
+                                    <label for="description" class="label-font">What makes your masterpiece unique? </label>
                                 </td>
                                 <td>
                                     <h4>
@@ -73,7 +73,7 @@
                                 </td>
                             </tr>
                             <tr class="trow">
-                                <td><label for="category">Select Category: </label></td>
+                                <td><label for="category" class="label-font">Select Category: </label></td>
                                 <td><select name="category" id="category">
                                         <option value="">--Choose category--</option>
                                         <option value="Painting">Painting</option>
@@ -84,7 +84,7 @@
                             <tr>
                             <tr class="trow">
                                 <td>
-                                    <label for="price">Price: </label>
+                                    <label for="price" class="label-font">Price: </label>
                                 </td>
                                 <td>
                                     <h4>
@@ -93,7 +93,7 @@
                                 </td>
                             </tr>
                             <tr class="trow">
-                                <td><label>Date of Creation of this Masterpiece: </label></td>
+                                <td><label for="date" class="label-font">Date of Creation of this Masterpiece: </label></td>
                                 <td>
                                     <h4>
                                         <input type="datetime-local" name="creationDate" id="creationDate">
