--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -99,7 +99,7 @@
                                         <input type="datetime-local" name="creationDate" id="creationDate">
                                     </h4>
                                 </td>
-                                <!-- </tr>
+                                </tr>
                             <tr class="trow">
                                 <td>
                                     <label for="name">Your Preferred Name: </label>
@@ -117,17 +117,17 @@
                                 <td>
                                     <canvas id="space">
 
-                                    </canvas> -->
+                                    </canvas>
 
-                                <!-- <div id="buttons">
+                                 <div id="buttons">
                                     <input type="file" multiple="false" accept="image/*" id="finput"
                                         onchange="upload()">
                                     </td>
-                            </tr> -->
+                            </tr>
                             </tr>
                         </table>
                         <div class="lg-6">
-                            <button class="btn-primary btn-lg history-btn1">Submit</button>
+                            <button class="btn-primary btn-md history-btn1">Submit</button>
                         </div>
                         <div class="lg-6">
                         </div>
