--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
             <div class="left">
                 <div class="logo">
                     <a class="st-navbar-desktop-logo-link" title="Logo" href="/">
-                        <p><span>ArtHub</span></p>
+                        <p><span>ArtHarbour</span></p>
                     </a>
                 </div>
                 <div class="search_bar">
