updates ports and functionalities

--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -110,3 +110,30 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.midPage-logo {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 10px;
+  letter-spacing: 3px;
+  font-size: medium;
+  color: black;
+}
+.glow {
+  /* font-size: 60px; */
+  color: #6B240C;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+  font-family: "Shadows Into Light";
+/* font-size: clamp(1rem, 3vw, 2em); */
+}
+
+@-webkit-keyframes glow {
+  from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+
+  to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
