--- a/views/paintings.ejs
+++ b/views/paintings.ejs
@@ -39,7 +39,7 @@
   <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
     <%- include('./partials/navbar') %>
   </div>
-  <!-- <h2 class=" art-heading">Featured Paintings</h2> -->
+  <h2 class=" art-heading">Featured Paintings</h2>
   <div class="whole-card">
     <% prods.forEach(function(Product){%>
       <div class="card" style="height: min-content;width: 700px; margin: 10px;">
