--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -127,7 +127,7 @@
                             </tr>
                         </table>
                         <div class="lg-6">
-                            <button class="btn-primary btn-md history-btn1">Submit</button>
+                            <button class="btn-primary btn-md history-btn1">Submit Work</button>
                         </div>
                         <div class="lg-6">
                         </div>
