--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -34,6 +34,9 @@
 <body>
     <%- include('../partials/flash')%>
         <div class="login-page">
+            <div class="midPage-logo">
+                <h1 class="glow">Welcome to ArtHarbour!</h1>
+              </div>
             <div class="form">
                 <form class="register-form" method="post" action="/user/register">
                     <input type="text" name="username" id="username" placeholder="username" />
