--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -28,7 +28,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/main.css">
-  <link rel="stylesheet" href="/styles/painting.css">
   <link rel="stylesheet" href="/styles/navbar.css">
   <link rel="stylesheet" href="/styles/cart.css">
   <title>ArtHarbour</title>
@@ -39,8 +38,8 @@
     <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
       <%- include('./partials/navbar') %>
     </div>
-    <h2 class="art-heading"></h2>
-    <form action="/buy/transaction" method="get">
+    <div><h2 class="art-heading">Cart</h2></div>
+    <div>
       <div class="whole-card">
         <% productArr.forEach(function(Product){%>
           <div class="card" style="height: min-content;width: 700px; margin: 10px;">
@@ -66,7 +65,9 @@
               <p>Created: <%= Product.creationDate %>
               </p>
               </p>
-
+              <form class="d-inline" action="/cart/<%=Product._id%>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">Delete</button>
+              </form>
             </div>
           </div>
           <% }) %>
@@ -75,8 +76,10 @@
               </p>
             </div>
       </div>
-      <button type="submit" class="btn-primary btn-md history-btn1">Submit</button>
+      <form action="/createOrder" method="get">
+      <button type="submit" class="btn-primary btn-md">Proceed to Payment</button>
     </form>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
       integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
       crossorigin="anonymous"></script>
