--- a/views/communityChat/community.ejs
+++ b/views/communityChat/community.ejs
@@ -28,10 +28,10 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/painting.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
-    <link rel="stylesheet" href="/styles/cart.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/community.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/cart.css">
     <title>ArtHarbour</title>
 </head>
 
@@ -42,9 +42,6 @@
         </div>
         <!-- <h2 class=" art-heading">Featured Paintings</h2> -->
         <div class="whole-card">
-            <form action="/community/new" method="get">
-                <button>New</button>
-            </form>
             <% comments.forEach(function(comment){%>
                 <div class="card" style="height: min-content;width: 700px; margin: 10px;">
                     <div class="card-body">
@@ -61,9 +58,29 @@
                         <p>Commented On: <%= comment.created %>
                         </p>
                         </p>
+                        <% if(currentUser && (comment.author===currentUser.username) ||
+                            (comment.author===currentUser.username)){ %>
+                            <form action="/<%= comment._id %>?_method=DELETE" method="post">
+                                <button class="btn btn-sm btn-danger">Delete</button>
+                            </form>
+                            <% } %>
                     </div>
                 </div>
                 <% }) %>
+                <form action="/community" method="post">
+                        <div class="chat-input">
+                            <form>
+                              <input type="text" id="description" name="description" placeholder="Write your message..">
+                              <button class="chat-btn" type="submit">
+                                <i class="fa fa-paper-plane-o"></i>
+                              </button>
+                            </form>
+                          </div>
+                        </div>
+                    </form>
+                    <!-- <input type="text" id="description" name="description">
+                    <button type="submit">Post</button> -->
+                </form>
 
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
