--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/gallery.css">
+  <link rel="stylesheet" href="/styles/navbar.css">
   <title>Art Gallery</title>
 </head>
 
 <body>
+  <div id="st-navbar-desktop-wrapper" class="st-navbar-desktop-wrapper st-navbar-desktop-fixed">
+    <%- include('./partials/navbar') %>
+  </div>
   <section class="intro">
     <div class="intro-content">
       <h1 class="title">Share your Creativity</h1>
