--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -33,6 +33,9 @@
 <body>
   <%- include('../partials/flash')%>
     <div class="login-page">
+      <div class="midPage-logo">
+        <h1 class="glow">Welcome to ArtHarbour!</h1>
+      </div>
       <div class="form">
         <form class="login-form" method="post" action="/user/login">
           <input type="text" name="username" id="username" placeholder="username" />
